syntax = "proto3";

package kalandra.keyauth.department;
option go_package="github.com/kalandramo/keyauth/apps/department";

import "github.com/infraboard/mcube/pb/page/page.proto";
import "apps/department/pb/enum.proto";
import "common/types/types.proto";

// CreateDepartmentRequest 创建部门请求
message CreateDepartmentRequest {
    // 部门名称
    // @gotags: json:"name" validate:"required,lte=60"
    string name = 1;
    // 显示名称
    // @gotags: json:"display_name"
    string display_name = 2;
    // 上级部门ID
    // @gotags: json:"parent_id" validate:"lte=200"
    string parent_id = 3;
    // 部门管理者account
    // @gotags: json:"manager" validate:"required,lte=200"
    string manager = 4;
    // 部门成员默认角色
    // @gotags: json:"default_role_id" validate:"lte=200"
    string default_role_id = 5;
    // 部门所属域
    // @gotags: json:"domain"
    string domain = 6;
    // 创建人
    // @gotags: json:"create_by"
    string create_by = 7;
}

// QueryDepartmentRequest todo
message QueryDepartmentRequest {
    // @gotags: json:"page"
    infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"parent_id"
    string parent_id = 2;
    // @gotags: json:"keywords"
    string keywords = 3;
    // @gotags: json:"skip_items"
    bool skip_items = 4;
    // @gotags: json:"with_sub_count"
    bool with_sub_count = 5;
    // @gotags: json:"with_user_count"
    bool with_user_count = 6;
    // @gotags: json:"with_role"
    bool with_role = 7;
    // @gotags: json:"domain" validate:"required"
    string domain = 8;
}

// DescribeDeparmentRequest 详情查询
message DescribeDeparmentRequest {
    // @gotags: json:"id"
    string id = 1;
    // @gotags: json:"name"
	string name = 2;
    // @gotags: json:"with_sub_count"
	bool with_sub_count = 3;
    // @gotags: json:"with_user_count"
	bool with_user_count = 4;
    // @gotags: json:"with_role"
    bool with_role = 5;
    // @gotags: json:"domain" validate:"required"
    string domain = 6;
}

// UpdateDepartmentRequest todo
message UpdateDepartmentRequest {
    // 更新模式
    // @gotags: json:"update_mode"
    kalandra.keyauth.types.UpdateMode update_mode = 1;
    // @gotags: json:"id"
    string id = 2;
    // @gotags: json:"data"
    CreateDepartmentRequest data = 3;
}

// DeleteDepartmentRequest todo
message DeleteDepartmentRequest {
	string id = 1;
}

// JoinDepartmentRequest todo
message JoinDepartmentRequest {
    // 申请人
    // @gotags: json:"account" validate:"required"
    string account = 1;
    // 申请加入的部门
    // @gotags: json:"department_id" validate:"required"
    string department_id = 2;
    // 留言
    // @gotags: json:"message"
    string message = 3;
    // 所属域
    // @gotags: json:"domain"
    string domain = 4;
}

// QueryApplicationFormRequet todo
message QueryApplicationFormRequet {
    // @gotags: json:"page"
    infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"account"
    string account = 2;
    // @gotags: json:"department_id"
    string department_id = 3;
    // @gotags: json:"status"
    ApplicationFormStatus status =4;
    // @gotags: json:"skip_items"
    bool skip_items = 5;
    // @gotags: json:"domain" validate:"required"
    string domain = 6;
}

// DescribeApplicationFormRequet todo
message DescribeApplicationFormRequet {
    // @gotags: json:"id"
	string id = 1;
    // @gotags: json:"domain"
    string domain = 2;
}

// DealApplicationFormRequest todo
message DealApplicationFormRequest {
    // 用户
    // @gotags: json:"id"
	string id = 1;
    // 状态
    // @gotags: json:"status"
    ApplicationFormStatus status =2;
    // 备注
    // @gotags: json:"message"
    string message = 3;
}